feat: deleted useless scss, compiled css #1 (min)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,9 +7,9 @@
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon_dark.png" />
 		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
+    <meta name="generator" content={Astro.generator} />
+    <link rel="stylesheet" type="text/css" href="../../css/styles.css" />
     <title>rokybeast</title>
-<style>*{font-family: "Inter";}</style>
 	</head>
 	<body>
 		<h1>rokybeast's very amazing website (yes)</h1>
