--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,9 @@ import SpotifyWidget from "../components/SpotifyWidget.svelte";
 import ProjectsSlideshow from "../components/ProjectsSlideshow.svelte";
 import ToolsMarquee from "../components/ToolsMarquee.svelte";
 import ToTopButton from "../components/ToTopButton.svelte";
+
+// SCSS
+import "./scss/styles.scss";
 ---
 
 <html lang="en">
