fix: Fix SCSS path

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import ToolsMarquee from "../components/ToolsMarquee.svelte";
 import ToTopButton from "../components/ToTopButton.svelte";
 
 // SCSS
-import "./scss/styles.scss";
+import "../scss/styles.scss";
 ---
 
 <html lang="en">
