rm: Comment AlertBar

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import AlertBar from "../components/AlertBar.svelte";
+// import AlertBar from "../components/AlertBar.svelte";
 import Navbar from "../components/Navbar.svelte";
 import SpotifyWidget from "../components/SpotifyWidget.svelte";
 import ProjectsSlideshow from "../components/ProjectsSlideshow.svelte";
@@ -30,7 +30,7 @@ import "../scss/styles.scss";
   <body data-theme="light" class="alert-bar-active">
     <div class="grid-background"></div>
 
-    <AlertBar client:load />
+    <!-- <AlertBar client:load /> -->
     <Navbar client:load />
 
     <section id="welcome" class="full-screen-section">
